--- a/index.html
+++ b/index.html
@@ -5,112 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Image Classification</title>
   <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script>
-  <style>
-    body {
-      font-family: 'Arial', sans-serif;
-      background: linear-gradient(135deg, #6be3f3, #cb3af7, #6a11cb, #2575fc);
-      background-size: 400% 400%;
-      animation: gradientBackground 15s ease infinite;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-      margin: 0;
-      color: #333;
-    }
-    @keyframes gradientBackground {
-      0% { background-position: 0% 50%; }
-      50% { background-position: 100% 50%; }
-      100% { background-position: 0% 50%; }
-    }
-    h1 {
-      color: #333;
-      margin-bottom: 20px;
-      font-size: 2.5em;
-      animation: fadeIn 2s;
-      text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
-    }
-    .container {
-      background: rgba(255, 255, 255, 0.9);
-      padding: 30px;
-      border-radius: 15px;
-      box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
-      text-align: center;
-      width: 90%;
-      max-width: 400px;
-      animation: fadeInUp 1s ease-out;
-    }
-    input[type="file"] {
-      margin: 20px 0;
-      padding: 10px;
-      border-radius: 5px;
-      border: 1px solid #ccc;
-      background: linear-gradient(135deg, #6a11cb, #2575fc);
-      color: white;
-      cursor: pointer;
-      transition: background 0.3s ease-in-out, transform 0.3s ease-in-out;
-    }
-    input[type="file"]::-webkit-file-upload-button {
-      background: linear-gradient(135deg, #ff416c, #ff4b2b);
-      color: white;
-      padding: 10px 20px;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-      transition: background 0.3s ease-in-out, transform 0.3s ease-in-out;
-    }
-    input[type="file"]::-webkit-file-upload-button:hover {
-      background: linear-gradient(135deg, #ff4b2b, #ff416c);
-      transform: scale(1.05);
-    }
-    img {
-      width: 100%;
-      border-radius: 10px;
-      transition: transform 0.3s ease-in-out;
-      margin-bottom: 20px;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    }
-    img:hover {
-      transform: scale(1.05);
-    }
-    button {
-      background: linear-gradient(135deg, #007bff, #0056b3);
-      color: white;
-      padding: 10px 20px;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-      transition: background 0.3s ease-in-out, transform 0.3s ease-in-out;
-    }
-    button:hover {
-      background: linear-gradient(135deg, #0056b3, #003f7f);
-      transform: scale(1.05);
-    }
-    p {
-      font-size: 1.2em;
-      color: #007bff;
-      margin-top: 20px;
-      animation: fadeIn 2s;
-    }
-    @keyframes fadeIn {
-      from { opacity: 0; }
-      to { opacity: 1; }
-    }
-    @keyframes fadeInUp {
-      from {
-        opacity: 0;
-        transform: translate3d(0, 100%, 0);
-      }
-      to {
-        opacity: 1;
-        transform: translate3d(0, 0, 0);
-      }
-    }
-    #result {
-      animation: fadeIn 1s;
-    }
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
